# agents_glm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
agents_rag/: .env.example  README.md  pyproject.toml
agents_rag/docs/knowledge/: rag-knowledge-base-construction.md  rag-query-pipeline.md
agents_rag/docs/specs/: 2026-07-21-agents-rag-design.md  2026-07-22-knowledge-base-core-implementation.md  2026-07-23-query-pipeline-implementation.md
agents_rag/src/agents_rag/: __init__.py  cli.py  config.py  models.py
agents_rag/src/agents_rag/chunking/: base.py  parent_child.py  structural.py
agents_rag/src/agents_rag/citation/: checker.py  faithfulness.py  sources.py
agents_rag/src/agents_rag/cleaning/: normalizer.py
agents_rag/src/agents_rag/generation/: context_builder.py  llm.py  prompts.py
agents_rag/src/agents_rag/indexing/: bm25_index.py  cache.py  chroma_store.py  contextualizer.py  embedder.py  image_store.py  parent_store.py  vectorstore.py  vision_describer.py
agents_rag/src/agents_rag/ingestion/: actions.py  collector.py  fingerprint.py  registry.py
agents_rag/tests/fixtures/: sample.docx  sample.html  sample.md  sample.txt
agents_rag/tests/integration/: test_image_pipeline.py  test_ingest_pipeline.py
agents_rag/tests/unit/: test_chunking.py  test_cli.py  test_confidence.py  test_config.py  test_contextualizer.py  test_embedding.py  test_faithfulness.py  test_fallback.py  test_image_store.py  test_indexing.py  test_ingestion.py  test_models.py  test_parsing.py  test_query.py  test_query_rewriter.py  test_tree.py  test_vision_describer.py
(+68 files in other folders)
